Updated Base64 encoding method. Old method was deprecated according to compile warning.